Updated the jupyter notebook

--- a/quantum.ipynb
+++ b/quantum.ipynb
@@ -40,17 +40,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -128,6 +117,7 @@
     "### Run Simulation and generate Qiskit circuit\n",
     "\n",
     "Convert user gates to qiskit circuit and run it on local quantum simulator.\\\n",
+    "We generate the state vector for the bloch sphere.\\\n",
     "We measure each register at the end.\\\n",
     "The circuit is run with 1024 shots."
    ]
@@ -167,6 +157,9 @@
     "        elif action != None:\n",
     "            action(source, target)\n",
     "\n",
+    "    job = execute(qc, Aer.get_backend(\"statevector_simulator\"))\n",
+    "    statevector = job.result().get_statevector()\n",
+    "\n",
     "    for i in range(nbRegisters):\n",
     "        qc.measure(i, i)\n",
     "\n",
@@ -174,7 +167,7 @@
     "    job = execute(qc, backend, shots=1024)\n",
     "    result = job.result()\n",
     "    count = result.get_counts(qc)\n",
-    "    return count"
+    "    return count, statevector"
    ]
   },
   {
@@ -184,7 +177,9 @@
    },
    "source": [
     "### Generate Plot from the circuit\n",
-    "Generate a plot from the qiskit circuit result that will be sent and displayed on the user interface."
+    "Generate a plot from the qiskit circuit result that will be sent and displayed on the user interface.\\\n",
+    "For the level 1 circuit, we generate the bloch sphere of the qubit.\\\n",
+    "For the others, we generate the histogram plot."
    ]
   },
   {
@@ -196,46 +191,16 @@
    "outputs": [
    ],
    "source": [
-    "def getBase64Plot(count):\n",
+    "def getBase64Plot(count, statevector, level):\n",
     "    ioBytes = io.BytesIO()\n",
-    "    fig = plot_histogram(count)\n",
+    "    if level == 1:\n",
+    "        fig = plot_bloch_multivector(statevector)\n",
+    "    else:\n",
+    "        fig = plot_histogram(count)\n",
     "    fig.savefig(ioBytes, format = 'png')\n",
     "    ioBytes.seek(0)\n",
     "    encodedPlot = base64.b64encode(ioBytes.read())\n",
-    "    return encodedPlot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
-   "source": [
+    "    return encodedPlot.decode('utf-8')"
    ]
   }
  ],
